python/tests/gold/ratelimitv0test/snapshots/aconf.json
{
    "_errors": {},
    "_notices": {
        "ratelimitv0test-http.default.1": [
            "apiVersion ambassador/v0 is deprecated, consider upgrading"
        ],
        "ratelimitv0test.default.1": [
            "apiVersion ambassador/v0 is deprecated, consider upgrading"
        ]
    },
    "_sources": {
        "--diagnostics--": {
            "_referenced_by": {},
            "apiVersion": "ambassador/v0",
            "description": "The '--diagnostics--' source marks objects created by Ambassador to assist with diagnostic output.",
            "kind": "Diagnostics",
            "location": "--diagnostics--",
            "name": "Ambassador Diagnostics",
            "namespace": null,
            "rkey": "--diagnostics--",
            "serialization": null,
            "version": "ambassador/v0"
        },
        "--internal--": {
            "_referenced_by": {},
            "apiVersion": "ambassador/v0",
            "description": "The '--internal--' source marks objects created by Ambassador's internal logic.",
            "kind": "Internal",
            "location": "--internal--",
            "name": "Ambassador Internals",
            "namespace": null,
            "rkey": "--internal--",
            "serialization": null,
            "version": "ambassador/v0"
        },
        "k8s-rate-limit-v0-default": {
            "_referenced_by": {},
            "ambassador_id": "ratelimitv0test",
            "apiVersion": "ambassador/v1",
            "endpoints": {},
            "kind": "Service",
            "location": "k8s-rate-limit-v0-default",
            "name": "rate-limit-v0",
            "namespace": "default",
            "rkey": "k8s-rate-limit-v0-default",
            "serialization": "ambassador_id: ratelimitv0test\napiVersion: ambassador/v1\nendpoints: {}\nkind: Service\nname: rate-limit-v0\nnamespace: default\n"
        },
        "k8s-ratelimitv0test-admin-default": {
            "_referenced_by": {},
            "ambassador_id": "ratelimitv0test",
            "apiVersion": "ambassador/v1",
            "endpoints": {},
            "kind": "Service",
            "location": "k8s-ratelimitv0test-admin-default",
            "name": "ratelimitv0test-admin",
            "namespace": "default",
            "rkey": "k8s-ratelimitv0test-admin-default",
            "serialization": "ambassador_id: ratelimitv0test\napiVersion: ambassador/v1\nendpoints: {}\nkind: Service\nname: ratelimitv0test-admin\nnamespace: default\n"
        },
        "k8s-ratelimitv0test-default": {
            "_referenced_by": {},
            "ambassador_id": "ratelimitv0test",
            "apiVersion": "ambassador/v1",
            "endpoints": {},
            "kind": "Service",
            "location": "k8s-ratelimitv0test-default",
            "name": "ratelimitv0test",
            "namespace": "default",
            "rkey": "k8s-ratelimitv0test-default",
            "serialization": "ambassador_id: ratelimitv0test\napiVersion: ambassador/v1\nendpoints: {}\nkind: Service\nname: ratelimitv0test\nnamespace: default\n"
        },
        "k8s-ratelimitv0test-http-default": {
            "_referenced_by": {},
            "ambassador_id": "ratelimitv0test",
            "apiVersion": "ambassador/v1",
            "endpoints": {},
            "kind": "Service",
            "location": "k8s-ratelimitv0test-http-default",
            "name": "ratelimitv0test-http",
            "namespace": "default",
            "rkey": "k8s-ratelimitv0test-http-default",
            "serialization": "ambassador_id: ratelimitv0test\napiVersion: ambassador/v1\nendpoints: {}\nkind: Service\nname: ratelimitv0test-http\nnamespace: default\n"
        },
        "ratelimitv0test-http.default.1": {
            "_referenced_by": {},
            "ambassador_id": "ratelimitv0test",
            "apiVersion": "ambassador/v0",
            "kind": "Mapping",
            "location": "ratelimitv0test-http.default.1",
            "name": "ratelimit_target_mapping",
            "namespace": "default",
            "prefix": "/target/",
            "rate_limits": [
                {
                    "descriptor": "A test case",
                    "headers": [
                        "x-ambassador-test-allow"
                    ]
                }
            ],
            "rkey": "ratelimitv0test-http.default.1",
            "serialization": "ambassador_id: ratelimitv0test\napiVersion: ambassador/v0\nkind: Mapping\nname: ratelimit_target_mapping\nprefix: /target/\nrate_limits:\n- descriptor: A test case\n  headers:\n  - x-ambassador-test-allow\nservice: ratelimitv0test-http\n",
            "service": "ratelimitv0test-http"
        },
        "ratelimitv0test-http.default.2": {
            "_referenced_by": {},
            "ambassador_id": "ratelimitv0test",
            "apiVersion": "ambassador/v1",
            "kind": "Mapping",
            "labels": {
                "ambassador": [
                    {
                        "host_and_user": [
                            {
                                "custom-label": {
                                    "header": ":authority",
                                    "omit_if_not_present": true
                                }
                            },
                            {
                                "user": {
                                    "header": "x-user",
                                    "omit_if_not_present": true
                                }
                            }
                        ]
                    },
                    {
                        "omg_header": [
                            {
                                "custom-label": {
                                    "default": "OMFG!",
                                    "header": "x-omg"
                                }
                            }
                        ]
                    }
                ]
            },
            "location": "ratelimitv0test-http.default.2",
            "name": "ratelimit_label_mapping",
            "namespace": "default",
            "prefix": "/labels/",
            "rkey": "ratelimitv0test-http.default.2",
            "serialization": "ambassador_id: ratelimitv0test\napiVersion: ambassador/v1\nkind: Mapping\nlabels:\n  ambassador:\n  - host_and_user:\n    - custom-label:\n        header: :authority\n        omit_if_not_present: true\n    - user:\n        header: x-user\n        omit_if_not_present: true\n  - omg_header:\n    - custom-label:\n        default: OMFG!\n        header: x-omg\nname: ratelimit_label_mapping\nprefix: /labels/\nservice: ratelimitv0test-http\n",
            "service": "ratelimitv0test-http"
        },
        "ratelimitv0test.default.1": {
            "_referenced_by": {},
            "ambassador_id": "ratelimitv0test",
            "apiVersion": "ambassador/v0",
            "kind": "RateLimitService",
            "location": "ratelimitv0test.default.1",
            "name": "ratelimit-v0",
            "namespace": "default",
            "rkey": "ratelimitv0test.default.1",
            "serialization": "ambassador_id: ratelimitv0test\napiVersion: ambassador/v0\nkind: RateLimitService\nname: ratelimit-v0\nservice: rate-limit-v0:5000\ntimeout_ms: 500\n",
            "service": "rate-limit-v0:5000",
            "timeout_ms": 500
        }
    },
    "mappings": {
        "ratelimit_label_mapping": {
            "ambassador_id": "ratelimitv0test",
            "apiVersion": "ambassador/v1",
            "kind": "Mapping",
            "labels": {
                "ambassador": [
                    {
                        "host_and_user": [
                            {
                                "custom-label": {
                                    "header": ":authority",
                                    "omit_if_not_present": true
                                }
                            },
                            {
                                "user": {
                                    "header": "x-user",
                                    "omit_if_not_present": true
                                }
                            }
                        ]
                    },
                    {
                        "omg_header": [
                            {
                                "custom-label": {
                                    "default": "OMFG!",
                                    "header": "x-omg"
                                }
                            }
                        ]
                    }
                ]
            },
            "name": "ratelimit_label_mapping",
            "namespace": "default",
            "prefix": "/labels/",
            "service": "ratelimitv0test-http"
        },
        "ratelimit_target_mapping": {
            "ambassador_id": "ratelimitv0test",
            "apiVersion": "ambassador/v0",
            "kind": "Mapping",
            "name": "ratelimit_target_mapping",
            "namespace": "default",
            "prefix": "/target/",
            "rate_limits": [
                {
                    "descriptor": "A test case",
                    "headers": [
                        "x-ambassador-test-allow"
                    ]
                }
            ],
            "service": "ratelimitv0test-http"
        }
    },
    "ratelimit_configs": {
        "ratelimit-v0": {
            "ambassador_id": "ratelimitv0test",
            "apiVersion": "ambassador/v0",
            "kind": "RateLimitService",
            "name": "ratelimit-v0",
            "namespace": "default",
            "service": "rate-limit-v0:5000",
            "timeout_ms": 500
        }
    },
    "service": {
        "k8s-rate-limit-v0-default": {
            "ambassador_id": "ratelimitv0test",
            "apiVersion": "ambassador/v1",
            "endpoints": {},
            "kind": "Service",
            "name": "rate-limit-v0",
            "namespace": "default"
        },
        "k8s-ratelimitv0test-admin-default": {
            "ambassador_id": "ratelimitv0test",
            "apiVersion": "ambassador/v1",
            "endpoints": {},
            "kind": "Service",
            "name": "ratelimitv0test-admin",
            "namespace": "default"
        },
        "k8s-ratelimitv0test-default": {
            "ambassador_id": "ratelimitv0test",
            "apiVersion": "ambassador/v1",
            "endpoints": {},
            "kind": "Service",
            "name": "ratelimitv0test",
            "namespace": "default"
        },
        "k8s-ratelimitv0test-http-default": {
            "ambassador_id": "ratelimitv0test",
            "apiVersion": "ambassador/v1",
            "endpoints": {},
            "kind": "Service",
            "name": "ratelimitv0test-http",
            "namespace": "default"
        }
    }
}
